--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,12 @@ services:
       - '3306:3306'
     command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - mysql-data:/var/lib/mysql
+      - mysql-db:/var/lib/mysql
+    cap_add:
+      - SYS_NICE
   api:
     build: .
-    command: /bin/sh -c "rm -f /app/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: ash -c "rm -f /app/tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     image: rails:dev
     volumes:
       - .:/app
@@ -24,5 +26,5 @@ services:
     depends_on:
       - db
 volumes:
-  mysql-data:
+  mysql-db:
     driver: local
