--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: directory_doc_api_development
+  database: mini_cart_api_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: directory_doc_api_test
+  database: mini_cart_api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: directory_doc_api_production
-  username: directory_doc_api
-  password: <%= ENV['DIRECTORY_DOC_API_DATABASE_PASSWORD'] %>
+  database: mini_cart_api_production
+  username: mini_cart_api
+  password: <%= ENV['MINI_CART_API_DATABASE_PASSWORD'] %>
